Fix display of deadline table on mobile
The columns need to stack, otherwise it stretches the page too much

--- a/css/styles.css
+++ b/css/styles.css
@@ -45,6 +45,8 @@
 }
 .ui.vertical.stripe h3 {
   font-size: 1.3em;
+}
+.ui.vertical.stripe h4 {
   font-weight: bold;
 }
 .ui.vertical.stripe p {
